# botoh

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix  rustfmt.toml
.woodpecker/: flake-lock-update.yml
helix/: Cargo.toml
nix/: module.nix
src/: api.rs  client.rs  commands.rs  main.rs
src/commands/: lastfm.rs  logs.rs  massping.rs  mod.rs  ping.rs  test.rs  user.rs
