[package]
name = "botoh"
version = "0.1.0"
edition = "2021"

[dependencies]
console-subscriber = "0.3.0"
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sysinfo = "0.30.12"
tokio = { version = "1.37.0", features = ["full"] }
twitch-irc = "5.0.1"
